--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
   <div class="text">
-    <b>Just like I love spending time with my favorite streamer! <br><br>Look at <a href="https://www.twitch.tv/shxtou" target="_blank">hiM!</a> I love his just-hcatting streams. <br><br>He talks about really deep stuff. <br><br>Like <a href="https://www.youtube.com/watch?v=DrFyY7FK4H8" target="_blank">israel and palestine.</a> </b>
+    <b>Just like I love spending time with my favorite streamer! <br><br>Look at <a href="https://shfessuh.github.io/internet_letter/" target="_blank">hiM!</a> I love his just-hcatting streams. <br><br>He talks about really deep stuff. <br><br>Like <a href="https://yruann.github.io/letter-to-internet/" target="_blank">israel and palestine.</a> </b>
     <button class="next-button" onclick="navigateToNextPage()">Next</button>
   </div>
   <div class="logo">
